--- a/app/css/main.css
+++ b/app/css/main.css
@@ -26,13 +26,13 @@ ol, ul {
   list-style: none;
 }
 
-.clearfix:after, .header-bottom__bottom:after, .search__form:after {
+.clearfix:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after {
   content: '';
   display: table;
   clear: both;
 }
 
-.clearfix:before, .header-bottom__bottom:before, .search__form:before {
+.clearfix:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before {
   content: '';
   display: table;
 }
@@ -162,10 +162,10 @@ body {
 .social {
   font-size: 0;
   padding-top: 18px;
+  text-align: right;
 }
 
 .social__item {
-  text-align: right;
   display: inline-block;
   margin-left: 10px;
   font-size: 16px;
@@ -193,10 +193,11 @@ body {
 
 .logo {
   float: left;
+  width: 204px;
 }
 
 .logo__link {
-  width: 204px;
+  width: 100%;
   height: 50px;
   display: block;
 }
@@ -238,9 +239,11 @@ body {
   float: left;
   margin-left: 60px;
   padding-top: 10px;
+  width: 204px;
 }
 
 .phone__number {
+  width: 100%;
   color: #333138;
   font-family: "MuseoSansMedium", sans-serif;
   font-size: 24px;
@@ -256,15 +259,17 @@ body {
 
 .call-the-master {
   float: right;
+  width: 210px;
 }
 
 .call-the-master__button {
-  display: inline-block;
+  width: 100%;
+  display: block;
+  text-align: center;
   border: 1px solid #515052;
   border-radius: 2px;
   text-transform: uppercase;
   height: 50px;
-  padding: 0 45px;
   line-height: 50px;
   color: #515052;
   font-family: "OpenSansRegular", sans-serif;
@@ -275,4 +280,67 @@ body {
   text-decoration: none;
   color: #515052;
   background-color: #e5e4e6;
+}
+
+.mob-header {
+  float: right;
+  display: none;
+  padding-top: 5px;
+}
+
+.mob-menu {
+  float: left;
+}
+
+.mob-menu__icon {
+  background-image: url(../img/phone-icon-header.png);
+  width: 27px;
+  height: 22px;
+  display: block;
+  background-position: 0 0;
+  cursor: pointer;
+}
+
+.mob-search {
+  float: left;
+  margin-left: 20px;
+}
+
+.mob-search__icon {
+  background-image: url(../img/phone-icon-header.png);
+  width: 22px;
+  height: 22px;
+  display: block;
+  background-position: 0 -24px;
+}
+
+.mob-arrow {
+  float: left;
+  margin-left: 20px;
+}
+
+.mob-arrow__icon {
+  background-image: url(../img/phone-icon-header.png);
+  width: 20px;
+  height: 20px;
+  display: block;
+  background-position: 0 -48px;
+}
+
+.nav-toggle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50px;
+  background-color: #f2eff4;
+  width: 100%;
+  padding: 0 10px;
+  display: none;
+}
+
+.nav-toggle .nav__item {
+  width: 50%;
+  float: left;
+  display: block;
+  margin-left: 0;
 }
