--- a/sass/media.sass
+++ b/sass/media.sass
@@ -4,16 +4,45 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
+	.nav__item
+		margin-left: 20px
+		padding-left: 30px
+	.search, .phone
+		margin-left: 20px
+	.call-the-master
+		width: 200px
 	/**/
 
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px)
+@media only screen and (max-width : 991px)
+	.header-top__right, .search
+		display: none
+	.phone
+		margin-left: 95px
 	/**/
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
+	.logo
+		width: 126px
+	.phone, .call-the-master
+		display: none
+	.header-bottom__wrapper
+		min-height: 60px
+		padding-top: 18px
+		-webkit-box-shadow: 0px 2px 8px 0px rgba(#cfcdd1,0.75)
+		-moz-box-shadow: 0px 2px 8px 0px rgba(#cfcdd1,0.75)
+		box-shadow: 0px 2px 8px 0px rgba(#cfcdd1,0.75)
+		z-index: 999
+		border-bottom: none
+	.nav-toggle
+		z-index: -1
+	.mob-header
+		display: block
+	.header-top__wrapper
+		display: none
 	/**/
 
 
@@ -41,6 +70,7 @@
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
+
 	/**/
 
 
