--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -55,3 +55,39 @@ ol, ul
 		color: #515052
 		font-size: 14px
 		line-height: 50px
+
+.sidebar-menu__title-name-open
+	&::after
+		background-position: top left !important
+
+.consultation__comment-area
+	&::-webkit-input-placeholder
+		line-height: 18px !important
+	&::-moz-placeholder
+		line-height: 18px !important
+	&:-moz-placeholder
+		line-height: 18px !important
+	&:-ms-input-placeholder
+		line-height: 18px !important
+
+.consultation__input, .consultation__comment-area
+	&::-webkit-input-placeholder
+		font-family: "OpenSansRegular", sans-serif
+		font-size: 14px
+		color: #959397
+		line-height: 50px
+	&::-moz-placeholder
+		font-family: "OpenSansRegular", sans-serif
+		font-size: 14px
+		color: #959397
+		line-height: 50px
+	&:-moz-placeholder
+		font-family: "OpenSansRegular", sans-serif
+		font-size: 14px
+		color: #959397
+		line-height: 50px
+	&:-ms-input-placeholder
+		font-family: "OpenSansRegular", sans-serif
+		font-size: 14px
+		color: #959397
+		line-height: 50px
