--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -27,3 +27,22 @@
 	url("../fonts/MuseoSansLightItalic/MuseoSansLightItalic.ttf") format("truetype")
 	font-style: normal
 	font-weight: normal
+
+/* font-family: "MuseoSansCyrl900" */
+@font-face
+	font-family: "MuseoSansCyrl900"
+	src:url(../fonts/MuseoSans/OpenSans-ExtraBold.ttf)
+
+/* font-family: "MuseoSansLight" */
+@font-face
+	font-family: "MuseoSansLight"
+	src: url("../fonts/MuseoSansLight/MuseoSansLight.eot")
+	src: url("../fonts/MuseoSansLight/MuseoSansLight.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/MuseoSansLight/MuseoSansLight.woff") format("woff"),
+	url("../fonts/MuseoSansLight/MuseoSansLight.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
+
+@font-face
+	font-family: "MuseoSansRegular"
+	src:url(../fonts/MuseoSans/MuseoSansRegular.ttf)
