--- a/sass/media.sass
+++ b/sass/media.sass
@@ -32,9 +32,9 @@
 	.header-bottom__wrapper
 		min-height: 60px
 		padding-top: 18px
-		-webkit-box-shadow: 0px 2px 8px 0px rgba(#cfcdd1,0.75)
-		-moz-box-shadow: 0px 2px 8px 0px rgba(#cfcdd1,0.75)
-		box-shadow: 0px 2px 8px 0px rgba(#cfcdd1,0.75)
+		-webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15)
+		-moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15)
+		box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15)
 		z-index: 999
 		border-bottom: none
 	.nav-toggle
