--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -91,3 +91,26 @@ ol, ul
 		font-size: 14px
 		color: #959397
 		line-height: 50px
+
+.search-sidebar
+	.search__input
+		&::-webkit-input-placeholder
+			line-height: 40px
+		&::-moz-placeholder
+			line-height: 40px
+		&:-moz-placeholder
+			line-height: 40px
+		&:-ms-input-placeholder
+			line-height: 40px
+
+.content-wrapper
+	width: 1200px
+	margin: 0 auto
+	@extend .clearfix
+
+.header-top__left
+	width: 80%
+	float: left
+.header-top__right
+	width: 20%
+	float: right
