--- a/sass/main.sass
+++ b/sass/main.sass
@@ -14,6 +14,7 @@ body
 	display: none
 
 .header
+	@extend .clearfix
 	&-top
 		&__wrapper
 			background-color: #f2eff4
@@ -199,10 +200,11 @@ body
 	position: absolute
 	left: 0
 	right: 0
-	top: 50px
+	top: 68px
 	background-color: #f2eff4
 	width: 100%
 	padding: 0 10px
+	z-index: 1
 	display: none
 	@extend .clearfix
 	.nav__item
@@ -217,7 +219,6 @@ body
 	float: left
 	width: 310px
 	&__title
-		width: 100%
 		padding: 20px
 		display: block
 		background-color: #590000
@@ -379,3 +380,153 @@ body
 			padding-top: 20px
 .content__wrapper
 	padding-bottom: 40px
+.footer
+	&__top
+		min-height: 190px
+		background-color: #515052
+		border-bottom: 1px solid #504f51
+		padding-top: 40px
+	&__bootom
+		height: 60px
+		background-color: #333138
+.cont-wrapper
+	width: 1200px
+	margin: 0 auto
+	@extend .clearfix
+.footer__f-menu
+	margin-left: 223px
+	float: left
+.footer__phone
+	float: right
+	margin-left: 0
+	padding-top: 0
+	.phone__number
+		color: #fff
+	.phone__email
+		color: #d4d4d4
+.f-menu
+	&__wrapper
+		float: left
+		margin-left: 38px
+		&:first-child
+			margin-left: 0
+	&__center
+		margin-top: 32px
+	&__title
+		color: #fff
+		font-size: 18px
+		line-height: 100%
+		display: block
+		padding-bottom: 14px
+	&__item
+		display: block
+	&__link
+		display: inline-block
+		color: #d4d4d4
+		font-family: "OpenSansRegular", sans-serif
+		font-size: 14px
+		line-height: 32px
+		&:hover
+			color: #d4d4d4
+			text-decoration: underline
+.copyright
+	color: #d4d4d4
+	font-size: 14px
+	line-height: 60px
+.sidebar-line, .sidebar-line-mob
+	width: 100%
+	height: 60px
+	background-color: #590000
+	padding-right: 2%
+	position: relative
+.menu-sidebar
+	float: left
+	+percent(290, 728)
+	border-right: 1px solid #d4d4d4
+	line-height: 60px
+	height: 60px
+	cursor: pointer
+	.sidebar__title-name
+		&::after
+			content: ''
+			background-image: url(../img/side-bar-icon.png)
+			background-position: left bottom
+			width: 16px
+			height: 10px
+			position: absolute
+			font-size: 12px
+			right: 0
+			top: 50%
+			margin-top: -5px
+			line-height: 100%
+.menu-sidebar-active
+	.sidebar__title-name
+		&::after
+			content: ''
+			background-image: url(../img/side-bar-icon.png)
+			background-position: left top !important
+.search-sidebar
+	display: block !important
+	float: right
+	+percent(420, 728)
+	margin-left: 0 !important
+	position: relative
+	margin-top: 10px
+	height: 40px
+	.search__input
+		width: 100%
+		padding-right: 44px
+		height: 40px
+	.search__button
+		position: absolute
+		right: 0
+		background-image: url(../img/loop.png)
+		background-repeat: no-repeat
+		background-color: transparent
+		width: 44px !important
+		height: 40px
+.sidebar-toggle-menu
+	position: absolute
+	background-color: #fff
+	left: 0
+	right: 0
+	top: 60px
+	padding-bottom: 10px
+	display: none
+	.sidebar-menu
+		-webkit-box-shadow: none
+		-moz-box-shadow: none
+		box-shadow: none
+		.sidebar-menu__title
+			width: 38.82%
+			background-color: transparent
+			.sidebar-menu__title-name
+				color: #515052
+				&::after
+					background-image: url(../img/arrow.png)
+	.sidebar-menu__wrapper
+		+percent(459, 768)
+		position: absolute
+		right: 0
+		top: 0 !important
+.sidebar-menu__title-active
+	background-color: #515052 !important
+	.sidebar-menu__title-name
+		color: #fff !important
+		&::after
+			background-image: url(../img/side-bar-icon.png) !important
+			background-position: left top !important
+.sidebar-line-mob
+	display: none
+	.sidebar-menu__title
+		width: 100% !important
+	.sidebar-menu__wrapper
+		width: 100%
+		background-color: #fff
+	.sidebar-menu__title-name
+		&::after
+			background-image: url(../img/mob-arrow.png) !important
+			background-repeat: no-repeat
+			width: 10px
+			height: 16px
+			margin-top: -8px
