--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -114,3 +114,17 @@ ol, ul
 .header-top__right
 	width: 20%
 	float: right
+
+.hide-element-w
+	padding-top: 20px
+.f-menu__wrapper
+	.hide-element-f
+		display: block !important
+		float: left !important
+		clear: both
+		margin-bottom: 0
+	.hide-element-l
+		width: auto
+		display: block !important
+		float: left !important
+		clear: both
