--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -44,5 +44,14 @@
 	font-weight: normal
 
 @font-face
+	font-family: "MuseoSansBold"
+	src: url("../fonts/MuseoSansBold/MuseoSansBold.eot")
+	src: url("../fonts/MuseoSansBold/MuseoSansBold.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/MuseoSansBold/MuseoSansBold.woff") format("woff"),
+	url("../fonts/MuseoSansBold/MuseoSansBold.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
+
+@font-face
 	font-family: "MuseoSansRegular"
 	src:url(../fonts/MuseoSans/MuseoSansRegular.ttf)
