--- a/sass/media.sass
+++ b/sass/media.sass
@@ -17,6 +17,12 @@
 		width: 200px
 	.footer__f-menu
 		margin-left: 108px
+	.main-content__card-info
+		width: 250px
+	.main-content__card-info-description
+		padding: 22px 20px
+	.main-content__card-info-description-item
+		margin-bottom: 10px
 	/**/
 
 /* Medium Devices, Desktops */
@@ -46,6 +52,10 @@
 	.footer__phone
 		clear: right
 		margin-right: 0
+	.main-content__card-info
+		width: 308 * 100 / 728 + %
+	.main-content__card-slider
+		width: 400 * 100 / 728 + %
 	/**/
 
 
@@ -123,6 +133,22 @@
 		padding-bottom: 17px
 	.f-menu__wrapper-last
 		margin-top: 20px
+	.main-content__articles-item-img
+		float: none
+		width: 100%
+		height: auto
+	.main-content__articles-item-title,
+	.main-content__articles-item-description-m,
+	.main-content__articles-item-full
+		margin-top: 10px
+	.main-content__articles-item-title
+		font-size: 16px
+		line-height: 18px
+	.main-content__card-info
+		width: 100%
+	.main-content__card-slider
+		width: 100%
+		margin-bottom: 20px
 	/**/
 
 
