--- a/app/css/media.css
+++ b/app/css/media.css
@@ -20,6 +20,15 @@
   .footer__f-menu {
     margin-left: 108px;
   }
+  .main-content__card-info {
+    width: 250px;
+  }
+  .main-content__card-info-description {
+    padding: 22px 20px;
+  }
+  .main-content__card-info-description-item {
+    margin-bottom: 10px;
+  }
   /**/
 }
 
@@ -59,6 +68,12 @@
   .footer__phone {
     clear: right;
     margin-right: 0;
+  }
+  .main-content__card-info {
+    width: 42.30769%;
+  }
+  .main-content__card-slider {
+    width: 54.94505%;
   }
   /**/
 }
@@ -164,6 +179,27 @@
   }
   .f-menu__wrapper-last {
     margin-top: 20px;
+  }
+  .main-content__articles-item-img {
+    float: none;
+    width: 100%;
+    height: auto;
+  }
+  .main-content__articles-item-title,
+  .main-content__articles-item-description-m,
+  .main-content__articles-item-full {
+    margin-top: 10px;
+  }
+  .main-content__articles-item-title {
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .main-content__card-info {
+    width: 100%;
+  }
+  .main-content__card-slider {
+    width: 100%;
+    margin-bottom: 20px;
   }
   /**/
 }
