--- a/sass/main.sass
+++ b/sass/main.sass
@@ -304,6 +304,101 @@ body
 			line-height: 24px
 			color: #515052
 			margin-bottom: 10px
+	&__articles
+		&-item
+			width: 100%
+			display: block
+			margin-bottom: 20px
+			@extend .clearfix
+			&:last-child
+				margin-bottom: 30px
+			&-img
+				display: block
+				float: left
+				margin-right: 20px
+				width: 240px
+				height: 160px
+			&-title
+				color: #333138
+				font-family: "MuseoSansBold", sans-serif
+				font-size: 18px
+				line-height: 18px
+			&-description-m
+				margin-top: 20px
+				font-family: "MuseoSansRegular", sans-serif
+				font-size: 14px
+				line-height: 24px
+				color: #333138
+			&-full
+				color: #333138
+				font-family: "OpenSansRegular", sans-serif
+				font-size: 14px
+				text-decoration: underline
+				margin-top: 20px
+				display: inline-block
+				&:hover
+					text-decoration: none
+					color: #333138
+	&__card
+		@extend .clearfix
+		&-slider
+			float: left
+			width: 400px
+			border: 1px solid #c7c4c9
+			height: 456px
+		&-info
+			float: right
+			width: 430px
+			height: 456px !important
+			position: relative
+			&-price
+				height: 84px
+				line-height: 84px
+				text-align: center
+				width: 100%
+				background-color: #515052
+				color: #fff
+				font-family: "MuseoSansBold", sans-serif
+				font-size: 36px
+			&-description
+				display: block
+				height: 372px
+				color: #333138
+				font-size: 14px
+				line-height: 24px
+				padding: 28px 40px 38px
+				background-color: #f2eff4
+				&-item
+					margin-bottom: 20px
+			&-button
+				display: block
+				width: 100%
+				background-color: #590000
+				color: #fefefe
+				font-size: 13px
+				text-transform: uppercase
+				font-family: "OpenSansRegular", sans-serif
+				height: 50px
+				text-align: center
+				line-height: 50px
+				border-radius: 2px
+				&:hover
+					color: #fefefe
+					text-decoration: none
+				&-wp
+					position: absolute
+					bottom: 30px
+					left: 40px
+					right: 40px
+			&-ds
+				float: left
+				margin-top: 24px
+				&-title
+					color: #333138
+					font-family: "MuseoSansRegular", sans-serif
+					font-size: 24px
+					margin-bottom: 16px
+					display: block
 .path
 	margin-top: 9px
 	&__item
@@ -538,3 +633,26 @@ body
 			width: 10px
 			height: 16px
 			margin-top: -8px
+.pagination
+	border-top: 1px solid #c7c4c9
+	display: block
+	font-size: 0
+	padding-top: 30px
+	padding-bottom: 14px
+	&__item
+		display: inline-block
+		margin-left: 10px
+		&:first-child
+			margin-left: 0
+	&__link
+		font-size: 13px
+		line-height: 13px
+		color: #515052
+		padding: 10px 12px
+		display: block
+		border: 1px solid #c7c4c9
+		border-radius: 2px
+		&:hover
+			text-decoration: none
+			color: #fff
+			background-color: #c7c4c9
