--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -55,3 +55,12 @@
 @font-face
 	font-family: "MuseoSansRegular"
 	src:url(../fonts/MuseoSans/MuseoSansRegular.ttf)
+
+@font-face
+	font-family: "OpenSansExtraBold"
+	src: url("../fonts/OpenSansExtraBold/OpenSansExtraBold.eot")
+	src: url("../fonts/OpenSansExtraBold/OpenSansExtraBold.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/OpenSansExtraBold/OpenSansExtraBold.woff") format("woff"),
+	url("../fonts/OpenSansExtraBold/OpenSansExtraBold.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
