--- a/sass/media.sass
+++ b/sass/media.sass
@@ -23,6 +23,10 @@
 		padding: 22px 20px
 	.main-content__card-info-description-item
 		margin-bottom: 10px
+	.main-content__catalog-link
+		height: 224px
+	.main-content__catalog-text
+		left: 32px
 	/**/
 
 /* Medium Devices, Desktops */
@@ -56,6 +60,8 @@
 		width: 308 * 100 / 728 + %
 	.main-content__card-slider
 		width: 400 * 100 / 728 + %
+	.main-content__catalog-link
+		height: 222px
 	/**/
 
 
@@ -149,6 +155,12 @@
 	.main-content__card-slider
 		width: 100%
 		margin-bottom: 20px
+	.main-content__catalog-item
+		width: 50%
+	.main-content__catalog-link
+		height: 150px
+	.main-content__catalog-text
+		font-size: 12px
 	/**/
 
 
