--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -52,3 +52,11 @@
   font-family: "MuseoSansRegular";
   src: url(../fonts/MuseoSans/MuseoSansRegular.ttf);
 }
+
+@font-face {
+  font-family: "OpenSansExtraBold";
+  src: url("../fonts/OpenSansExtraBold/OpenSansExtraBold.eot");
+  src: url("../fonts/OpenSansExtraBold/OpenSansExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSansExtraBold/OpenSansExtraBold.woff") format("woff"), url("../fonts/OpenSansExtraBold/OpenSansExtraBold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
