--- a/app/css/main.css
+++ b/app/css/main.css
@@ -26,13 +26,13 @@ ol, ul {
   list-style: none;
 }
 
-.clearfix:after, .content-wrapper:after, .sl2:after, .header:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after, .content__wrapper:after, .main-content__articles-item:after, .main-content__card:after, .consultation__row:after, .cont-wrapper:after {
+.clearfix:after, .content-wrapper:after, .sl2:after, .header:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after, .content__wrapper:after, .main-content__articles-item:after, .main-content__card:after, .main-content__catalog:after, .consultation__row:after, .cont-wrapper:after {
   content: '';
   display: table;
   clear: both;
 }
 
-.clearfix:before, .content-wrapper:before, .sl2:before, .header:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before, .content__wrapper:before, .main-content__articles-item:before, .main-content__card:before, .consultation__row:before, .cont-wrapper:before {
+.clearfix:before, .content-wrapper:before, .sl2:before, .header:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before, .content__wrapper:before, .main-content__articles-item:before, .main-content__card:before, .main-content__catalog:before, .consultation__row:before, .cont-wrapper:before {
   content: '';
   display: table;
 }
@@ -242,6 +242,37 @@ ol, ul {
   margin-left: -7.5px;
   top: 50%;
   margin-top: -12px;
+}
+
+.popup-img-active {
+  position: fixed;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(-50%);
+  min-width: auto;
+  max-width: 50%;
+  z-index: 2;
+  height: auto;
+}
+
+.popup-img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: none;
+  text-align: center;
+}
+
+.popup-bg {
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 
 body {
@@ -769,6 +800,68 @@ body {
   font-size: 24px;
   margin-bottom: 16px;
   display: block;
+}
+
+.main-content__catalog {
+  padding-bottom: 10px;
+}
+
+.main-content__catalog-item {
+  float: left;
+  display: block;
+  width: 33.33333%;
+}
+
+.main-content__catalog-link {
+  display: block;
+  width: 100%;
+  height: 283px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+  color: #fff;
+  padding: 10px;
+}
+
+.main-content__catalog-link::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(81, 80, 82, 0.7);
+}
+
+.main-content__catalog-link:hover::after {
+  background-color: rgba(99, 34, 37, 0.7);
+}
+
+.main-content__catalog-link:hover::before {
+  content: '';
+  position: absolute;
+  width: 92%;
+  height: 92%;
+  left: 4%;
+  top: 4%;
+  display: block;
+  border: 1px solid #fff;
+  z-index: 999;
+}
+
+.main-content__catalog-text {
+  position: absolute;
+  left: 50px;
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 999;
+  color: #fff;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "OpenSansExtraBold", sans-serif;
+  text-transform: uppercase;
 }
 
 .path {
