--- a/app/css/media.css
+++ b/app/css/media.css
@@ -29,6 +29,12 @@
   .main-content__card-info-description-item {
     margin-bottom: 10px;
   }
+  .main-content__catalog-link {
+    height: 224px;
+  }
+  .main-content__catalog-text {
+    left: 32px;
+  }
   /**/
 }
 
@@ -74,6 +80,9 @@
   }
   .main-content__card-slider {
     width: 54.94505%;
+  }
+  .main-content__catalog-link {
+    height: 222px;
   }
   /**/
 }
@@ -200,6 +209,15 @@
   .main-content__card-slider {
     width: 100%;
     margin-bottom: 20px;
+  }
+  .main-content__catalog-item {
+    width: 50%;
+  }
+  .main-content__catalog-link {
+    height: 150px;
+  }
+  .main-content__catalog-text {
+    font-size: 12px;
   }
   /**/
 }
