--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -187,3 +187,28 @@ ol, ul
 			margin-left: -7.5px
 			top: 50%
 			margin-top: -12px
+.popup-img-active
+	position: fixed
+	left: 0
+	right: 0
+	margin: 0 auto
+	top: 50%
+	transform: translateY(-50%)
+	min-width: auto
+	max-width: 50%
+	z-index: 2
+	height: auto
+.popup-img
+	position: absolute
+	height: 100%
+	width: 100%
+	top: 0
+	left: 0
+	display: none
+	text-align: center
+.popup-bg
+	background: rgba(0, 0, 0, 0.4)
+	position: absolute
+	z-index: 1
+	height: 100%
+	width: 100%
