--- a/sass/main.sass
+++ b/sass/main.sass
@@ -399,6 +399,56 @@ body
 					font-size: 24px
 					margin-bottom: 16px
 					display: block
+	&__catalog
+		@extend .clearfix
+		padding-bottom: 10px
+		&-item
+			float: left
+			display: block
+			width: 100 / 3 + %
+		&-link
+			display: block
+			width: 100%
+			height: 283px
+			background-repeat: no-repeat
+			background-position: center center
+			background-size: cover
+			position: relative
+			color: #fff
+			padding: 10px
+			&::after
+				content: ''
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				background-color: rgba(#515052,.7)
+			&:hover
+				&::after
+					background-color: rgba(#632225,.7)
+				&::before
+					content: ''
+					position: absolute
+					width: 92%
+					height: 92%
+					left: 4%
+					top: 4%
+					display: block
+					border: 1px solid #fff
+					z-index: 999
+		&-text
+			position: absolute
+			left: 50px
+			right: 50px
+			top: 50%
+			transform: translateY(-50%)
+			z-index: 999
+			color: #fff
+			font-size: 18px
+			line-height: 24px
+			font-family: "OpenSansExtraBold", sans-serif
+			text-transform: uppercase
 .path
 	margin-top: 9px
 	&__item
