--- a/app/css/main.css
+++ b/app/css/main.css
@@ -26,13 +26,13 @@ ol, ul {
   list-style: none;
 }
 
-.clearfix:after, .content-wrapper:after, .sl2:after, .header:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after, .content__wrapper:after, .main-content__articles-item:after, .main-content__card:after, .main-content__catalog:after, .consultation__row:after, .cont-wrapper:after {
+.clearfix:after, .content-wrapper:after, .sl2:after, .header:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after, .content__wrapper:after, .main-content__articles-item:after, .main-content__card:after, .main-content__catalog:after, .main-content__contacts-top:after, .main-content__lprod:after, .consultation__row:after, .cont-wrapper:after {
   content: '';
   display: table;
   clear: both;
 }
 
-.clearfix:before, .content-wrapper:before, .sl2:before, .header:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before, .content__wrapper:before, .main-content__articles-item:before, .main-content__card:before, .main-content__catalog:before, .consultation__row:before, .cont-wrapper:before {
+.clearfix:before, .content-wrapper:before, .sl2:before, .header:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before, .content__wrapper:before, .main-content__articles-item:before, .main-content__card:before, .main-content__catalog:before, .main-content__contacts-top:before, .main-content__lprod:before, .consultation__row:before, .cont-wrapper:before {
   content: '';
   display: table;
 }
@@ -273,6 +273,10 @@ ol, ul {
   z-index: 1;
   height: 100%;
   width: 100%;
+}
+
+.full-content {
+  width: 100% !important;
 }
 
 body {
@@ -745,7 +749,7 @@ body {
   width: 100%;
   background-color: #515052;
   color: #fff;
-  font-family: "MuseoSansBold", sans-serif;
+  font-family: "MuseoSansMedium", sans-serif;
   font-size: 36px;
 }
 
@@ -862,6 +866,142 @@ body {
   line-height: 24px;
   font-family: "OpenSansExtraBold", sans-serif;
   text-transform: uppercase;
+}
+
+.main-content__contacts-top {
+  margin-left: -40px;
+}
+
+.main-content__contacts-top-item {
+  padding: 8px 20px 20px;
+  background-color: #f2eff4;
+  width: 373px;
+  margin-left: 40px;
+  float: left;
+  margin-bottom: 40px;
+}
+
+.main-content__contacts-top-title {
+  color: #590000;
+  font-size: 18px;
+  padding: 10px 0;
+  font-family: "MuseoSansMedium", sans-serif;
+  display: block;
+}
+
+.main-content__contacts-top-line {
+  color: #333138;
+  font-size: 16px;
+  padding: 8px 0;
+}
+
+.main-content__contacts-top-line-bold {
+  font-family: "MuseoSansBold", sans-serif;
+}
+
+.main-content__contacts-bottom {
+  width: 100% !important;
+  height: 350px;
+}
+
+.main-content__documentation-item {
+  display: inline-block;
+  width: 320px;
+  margin-bottom: 8px;
+}
+
+.main-content__documentation-link {
+  display: block;
+  position: relative;
+  color: #515052;
+  font-size: 14px;
+  font-family: "OpenSansRegular", sans-serif;
+  padding: 8px 0 8px 28px;
+}
+
+.main-content__documentation-link:hover {
+  color: #515052;
+  text-decoration: underline;
+}
+
+.main-content__documentation-link::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 18px;
+  height: 24px;
+  margin-top: -12px;
+  background-image: url(../img/file.png);
+}
+
+.main-content__top-img {
+  height: 220px;
+}
+
+.main-content__top-img-img {
+  width: 100%;
+  display: block;
+  height: 100%;
+  background-image: url(../img/top-img.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+}
+
+.main-content__lprod {
+  margin-left: -42px;
+}
+
+.main-content__lprod-item {
+  width: 255px;
+  height: 355px;
+  padding: 40px 20px 0;
+  border: 1px solid #c7c4c9;
+  text-align: center;
+  position: relative;
+  margin-left: 42px;
+  margin-bottom: 30px;
+  float: left;
+}
+
+.main-content__lprod-item:hover {
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+}
+
+.main-content__lprod-img {
+  width: 132px;
+  height: 105px;
+  display: block;
+  margin: 0 auto;
+}
+
+.main-content__lprod-title {
+  margin-top: 40px;
+  display: inline-block;
+  color: #515052;
+  text-decoration: underline;
+}
+
+.main-content__lprod-title:hover {
+  text-decoration: none;
+  color: #515052;
+}
+
+.main-content__lprod-price {
+  color: #333138;
+  font-family: "MuseoSansMedium", sans-serif;
+  font-size: 24px;
+  padding-top: 8px;
+  padding-bottom: 12px;
+}
+
+.main-content__lprod-wp {
+  left: 20px;
+  right: 20px;
 }
 
 .path {
