--- a/app/css/media.css
+++ b/app/css/media.css
@@ -35,6 +35,20 @@
   .main-content__catalog-text {
     left: 32px;
   }
+  .main-content__contacts-top {
+    margin-left: -20px;
+  }
+  .main-content__contacts-top-item {
+    width: 320px;
+    margin-left: 20px;
+  }
+  .main-content__lprod {
+    margin-left: -20px;
+  }
+  .main-content__lprod-item {
+    width: 210px;
+    margin-left: 20px;
+  }
   /**/
 }
 
@@ -83,6 +97,28 @@
   }
   .main-content__catalog-link {
     height: 222px;
+  }
+  .main-content__contacts-top {
+    margin-left: 0;
+  }
+  .main-content__contacts-top-item {
+    width: 33.33333%;
+    margin-left: 0;
+    border-left: 1px solid #c7c4c9;
+  }
+  .main-content__contacts-top-item:first-child {
+    border-left: none;
+  }
+  .main-content__lprod {
+    margin-left: -2%;
+  }
+  .main-content__lprod-item {
+    width: 31.33333%;
+    margin-left: 2%;
+  }
+  .main-content__top-img {
+    margin-left: -2.1%;
+    width: 104.2%;
   }
   /**/
 }
@@ -218,6 +254,68 @@
   }
   .main-content__catalog-text {
     font-size: 12px;
+  }
+  .main-content__contacts-top {
+    margin-left: -2%;
+    width: 104% !important;
+    background-color: #f2eff4;
+  }
+  .main-content__contacts-top-item {
+    width: 50%;
+    margin-bottom: 0;
+    border-bottom: 1px solid #c7c4c9;
+    border-left: none;
+    font-size: 12px;
+  }
+  .main-content__contacts-top-item:last-child {
+    border-right: 1px solid #c7c4c9;
+  }
+  .main-content__contacts-top-item:first-child {
+    border-right: 1px solid #c7c4c9;
+  }
+  .main-content__contacts-top-title {
+    font-size: 16px;
+  }
+  .main-content__contacts-bottom {
+    margin-left: -2%;
+    width: 104% !important;
+  }
+  .main-content__documentation-item {
+    width: 100%;
+  }
+  .main-content__lprod {
+    margin-left: -2%;
+  }
+  .main-content__lprod-item {
+    width: 47%;
+    margin-left: 2%;
+    height: 250px;
+    padding-top: 30px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  .main-content__lprod-img {
+    width: 88px;
+    height: 70px;
+  }
+  .main-content__lprod-title {
+    margin-top: 16px;
+  }
+  .main-content__lprod-wp {
+    left: 15px;
+    right: 15px;
+    bottom: 20px;
+  }
+  .main-content__lprod-title {
+    font-size: 14px;
+  }
+  .main-content__lprod-price {
+    font-size: 18px;
+    padding-top: 4px;
+  }
+  .main-content__lprod-wp .main-content__card-info-button {
+    height: 40px;
+    line-height: 40px;
   }
   /**/
 }
