--- a/sass/main.sass
+++ b/sass/main.sass
@@ -358,7 +358,7 @@ body
 				width: 100%
 				background-color: #515052
 				color: #fff
-				font-family: "MuseoSansBold", sans-serif
+				font-family: "MuseoSansMedium", sans-serif
 				font-size: 36px
 			&-description
 				display: block
@@ -449,6 +449,106 @@ body
 			line-height: 24px
 			font-family: "OpenSansExtraBold", sans-serif
 			text-transform: uppercase
+	&__contacts
+		&-top
+			margin-left: -40px
+			@extend .clearfix
+			&-item
+				padding: 8px 20px 20px
+				background-color: #f2eff4
+				width: 373px
+				margin-left: 40px
+				float: left
+				margin-bottom: 40px
+			&-title
+				color: #590000
+				font-size: 18px
+				padding: 10px 0
+				font-family: "MuseoSansMedium", sans-serif
+				display: block
+			&-line
+				color: #333138
+				font-size: 16px
+				padding: 8px 0
+				&-bold
+					font-family: "MuseoSansBold", sans-serif
+		&-bottom
+			width: 100% !important
+			height: 350px
+	&__documentation
+		&-item
+			display: inline-block
+			width: 320px
+			margin-bottom: 8px
+		&-link
+			display: block
+			position: relative
+			color: #515052
+			font-size: 14px
+			font-family: "OpenSansRegular", sans-serif
+			padding: 8px 0 8px 28px
+			&:hover
+				color: #515052
+				text-decoration: underline
+			&::before
+				content: ''
+				position: absolute
+				left: 0
+				top: 50%
+				width: 18px
+				height: 24px
+				margin-top: -12px
+				background-image: url(../img/file.png)
+	&__top-img
+		height: 220px
+		&-img
+			width: 100%
+			display: block
+			height: 100%
+			background-image: url(../img/top-img.jpg)
+			background-repeat: no-repeat
+			background-position: center top
+			background-size: cover
+	&__lprod
+		margin-left: -42px
+		@extend .clearfix
+		&-item
+			width: 255px
+			height: 355px
+			padding: 40px 20px 0
+			border: 1px solid #c7c4c9
+			text-align: center
+			position: relative
+			margin-left: 42px
+			margin-bottom: 30px
+			float: left
+			&:hover
+				-webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15)
+				-moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15)
+				box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15)
+				border: none
+		&-img
+			width: 132px
+			height: 105px
+			display: block
+			margin: 0 auto
+		&-title
+			margin-top: 40px
+			display: inline-block
+			color: #515052
+			text-decoration: underline
+			&:hover
+				text-decoration: none
+				color: #515052
+		&-price
+			color: #333138
+			font-family: "MuseoSansMedium", sans-serif
+			font-size: 24px
+			padding-top: 8px
+			padding-bottom: 12px
+		&-wp
+			left: 20px
+			right: 20px
 .path
 	margin-top: 9px
 	&__item
