--- a/app/css/main.css
+++ b/app/css/main.css
@@ -26,13 +26,13 @@ ol, ul {
   list-style: none;
 }
 
-.clearfix:after, .content-wrapper:after, .sl2:after, .header:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after, .content__wrapper:after, .main-content__articles-item:after, .main-content__card:after, .main-content__catalog:after, .main-content__contacts-top:after, .main-content__lprod:after, .consultation__row:after, .cont-wrapper:after {
+.clearfix:after, .content-wrapper:after, .sl2:after, .header:after, .header-bottom__bottom:after, .search__form:after, .mob-header:after, .nav-toggle:after, .content__wrapper:after, .main-content__articles-item:after, .main-content__card:after, .main-content__catalog:after, .main-content__contacts-top:after, .main-content__lprod:after, .main-content__slider .slick-dots:after, .main-content__inform-block:after, .main-content__partners:after, .consultation__row:after, .cont-wrapper:after {
   content: '';
   display: table;
   clear: both;
 }
 
-.clearfix:before, .content-wrapper:before, .sl2:before, .header:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before, .content__wrapper:before, .main-content__articles-item:before, .main-content__card:before, .main-content__catalog:before, .main-content__contacts-top:before, .main-content__lprod:before, .consultation__row:before, .cont-wrapper:before {
+.clearfix:before, .content-wrapper:before, .sl2:before, .header:before, .header-bottom__bottom:before, .search__form:before, .mob-header:before, .nav-toggle:before, .content__wrapper:before, .main-content__articles-item:before, .main-content__card:before, .main-content__catalog:before, .main-content__contacts-top:before, .main-content__lprod:before, .main-content__slider .slick-dots:before, .main-content__inform-block:before, .main-content__partners:before, .consultation__row:before, .cont-wrapper:before {
   content: '';
   display: table;
 }
@@ -810,6 +810,11 @@ body {
   padding-bottom: 10px;
 }
 
+.main-content__catalog-glav {
+  padding-bottom: 40px;
+  border-bottom: 1px solid #c7c4c9;
+}
+
 .main-content__catalog-item {
   float: left;
   display: block;
@@ -1002,6 +1007,254 @@ body {
 .main-content__lprod-wp {
   left: 20px;
   right: 20px;
+}
+
+.main-content__slider {
+  height: 410px;
+}
+
+.main-content__slider .slick-dots {
+  position: absolute;
+  right: 35px;
+  bottom: 40px;
+}
+
+.main-content__slider .slick-dots li {
+  float: left;
+}
+
+.main-content__slider .slick-dots li button {
+  text-indent: -9999px;
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  background-color: #fff;
+  border-radius: 50%;
+  border: none;
+  margin: 0 5px;
+}
+
+.main-content__slider .slick-dots .slick-active button {
+  position: relative;
+}
+
+.main-content__slider .slick-dots .slick-active button::after {
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #590000;
+  left: 4px;
+  top: 4px;
+  border-radius: 50%;
+}
+
+.main-content__slider-item {
+  position: relative;
+}
+
+.main-content__slider-text {
+  position: absolute;
+  bottom: 76px;
+  left: 38px;
+  right: 38px;
+  display: block;
+  cursor: default;
+}
+
+.main-content__slider-text-title {
+  color: #333138;
+  font-size: 48px;
+  line-height: 48px;
+  font-family: "MuseoSansBlack", sans-serif;
+}
+
+.main-content__inform {
+  width: 100%;
+  height: 145px;
+  background-color: #661818;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.main-content__inform-block-item {
+  padding-left: 74px;
+  position: relative;
+  float: left;
+  margin-left: 56px;
+}
+
+.main-content__inform-block-item:first-child {
+  margin-left: 0;
+}
+
+.main-content__inform-block-circle {
+  width: 64px;
+  position: absolute;
+  height: 64px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  left: 0;
+  top: 0;
+}
+
+.main-content__inform-block-circle::after {
+  content: '';
+  background-image: url(../img/main-icon.png);
+  background-repeat: no-repeat;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
+
+.main-content__inform-block-circle-1::after {
+  height: 32px;
+  width: 32px;
+  background-position: 0 0;
+  margin-left: -16px;
+  margin-top: -16px;
+}
+
+.main-content__inform-block-circle-2::after {
+  height: 24px;
+  width: 32px;
+  background-position: -34px 0;
+  margin-left: -16px;
+  margin-top: -12px;
+}
+
+.main-content__inform-block-circle-3::after {
+  height: 20px;
+  width: 32px;
+  background-position: -68px 0;
+  margin-left: -16px;
+  margin-top: -10px;
+}
+
+.main-content__inform-block-title {
+  color: #fff;
+  font-family: "MuseoSansMedium", sans-serif;
+  font-size: 18px;
+  padding-bottom: 5px;
+  display: inline-block;
+}
+
+.main-content__inform-block-description {
+  color: #fff;
+  font-size: 14px;
+  font-family: "MuseoSansRegular", sans-serif;
+  line-height: 16px;
+}
+
+.main-content__more {
+  width: 100%;
+  border-bottom: 3px solid #c7c4c9;
+  text-align: center;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.main-content__more::after {
+  content: '';
+  height: 0;
+  width: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #c7c4c9;
+  position: absolute;
+  bottom: -9px;
+  left: 50%;
+  margin-left: -6px;
+  display: block;
+}
+
+.main-content__more::before {
+  content: '';
+  width: 100%;
+  height: 30px;
+  display: block;
+  left: 0;
+  right: 0;
+  position: absolute;
+  bottom: 22px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.main-content__more-button {
+  padding: 0 20px;
+  background-color: #c7c4c9;
+  border-radius: 2px 2px 0 0;
+  display: inline-block;
+  line-height: 21px;
+  color: #515052;
+  font-size: 14px;
+  font-family: "OpenSansRegular", sans-serif;
+  cursor: pointer;
+}
+
+.main-content__more-hidden {
+  display: none;
+}
+
+.main-content__more-d {
+  margin-top: 0;
+}
+
+.main-content__partners {
+  margin-top: 30px;
+  border-bottom: 1px solid #c7c4c9;
+  padding-bottom: 30px;
+}
+
+.main-content__partners-item {
+  float: left;
+  width: 33.33333%;
+  display: block;
+  margin-bottom: 36px;
+}
+
+.main-content__partners-link {
+  display: inline-block;
+}
+
+.main-content__partners-link img {
+  display: block;
+}
+
+.main-content__bslider {
+  width: 100%;
+}
+
+.main-content__bslider-item {
+  display: inline-block;
+  width: 58%;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.main-content__bslider-img {
+  width: 404px;
+  display: block;
+  width: 100%;
+}
+
+.main-content__bslider-title {
+  color: #333138;
+  font-size: 18px;
+  font-family: "MuseoSansRegular", sans-serif;
+  line-height: 24px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+.main-content__bslider-description {
+  color: #333138;
+  font-size: 14px;
+  font-family: "MuseoSansRegular", sans-serif;
+  line-height: 18px;
+  margin-top: 5px;
 }
 
 .path {
