--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -64,3 +64,12 @@
 	url("../fonts/OpenSansExtraBold/OpenSansExtraBold.ttf") format("truetype")
 	font-style: normal
 	font-weight: normal
+
+@font-face
+	font-family: "MuseoSansBlack"
+	src: url("../fonts/MuseoSansBlack/MuseoSansBlack.eot")
+	src: url("../fonts/MuseoSansBlack/MuseoSansBlack.eot?#iefix")format("embedded-opentype"),
+	url("../fonts/MuseoSansBlack/MuseoSansBlack.woff") format("woff"),
+	url("../fonts/MuseoSansBlack/OpenSansEMuseoSansBlackxtraBold.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
