--- a/sass/main.sass
+++ b/sass/main.sass
@@ -402,6 +402,9 @@ body
 	&__catalog
 		@extend .clearfix
 		padding-bottom: 10px
+		&-glav
+			padding-bottom: 40px
+			border-bottom: 1px solid #c7c4c9
 		&-item
 			float: left
 			display: block
@@ -549,6 +552,191 @@ body
 		&-wp
 			left: 20px
 			right: 20px
+	&__slider
+		height: 410px
+		.slick-dots
+			position: absolute
+			right: 35px
+			bottom: 40px
+			@extend .clearfix
+			li
+				float: left
+				button
+					text-indent: -9999px
+					width: 16px
+					height: 16px
+					padding: 0
+					background-color: #fff
+					border-radius: 50%
+					border: none
+					margin: 0 5px
+			.slick-active
+				button
+					position: relative
+					&::after
+						content: ''
+						position: absolute
+						width: 8px
+						height: 8px
+						background-color: #590000
+						left: 4px
+						top: 4px
+						border-radius: 50%
+		&-item
+			position: relative
+		&-img
+		&-text
+			position: absolute
+			bottom: 76px
+			left: 38px
+			right: 38px
+			display: block
+			cursor: default
+			&-title
+				color: #333138
+				font-size: 48px
+				line-height: 48px
+				font-family: "MuseoSansBlack", sans-serif
+	&__inform
+		width: 100%
+		height: 145px
+		background-color: #661818
+		padding-top: 40px
+		padding-left: 40px
+		padding-right: 40px
+		&-block
+			@extend .clearfix
+			&-item
+				padding-left: 74px
+				position: relative
+				float: left
+				margin-left: 56px
+				&:first-child
+					margin-left: 0
+			&-circle
+				width: 64px
+				position: absolute
+				height: 64px
+				border-radius: 50%
+				border: 1px solid #fff
+				left: 0
+				top: 0
+				&::after
+					content: ''
+					background-image: url(../img/main-icon.png)
+					background-repeat: no-repeat
+					display: block
+					position: absolute
+					left: 50%
+					top: 50%
+				&-1
+					&::after
+						height: 32px
+						width: 32px
+						background-position: 0 0
+						margin-left: -16px
+						margin-top: -16px
+				&-2
+					&::after
+						height: 24px
+						width: 32px
+						background-position: -34px 0
+						margin-left: -16px
+						margin-top: -12px
+				&-3
+					&::after
+						height: 20px
+						width: 32px
+						background-position: -68px 0
+						margin-left: -16px
+						margin-top: -10px
+			&-title
+				color: #fff
+				font-family: "MuseoSansMedium", sans-serif
+				font-size: 18px
+				padding-bottom: 5px
+				display: inline-block
+			&-description
+				color: #fff
+				font-size: 14px
+				font-family: "MuseoSansRegular", sans-serif
+				line-height: 16px
+	&__more
+		width: 100%
+		border-bottom: 3px solid #c7c4c9
+		text-align: center
+		position: relative
+		margin-bottom: 20px
+		&::after
+			content: ''
+			@include triangle(12px, #c7c4c9, down)
+			position: absolute
+			bottom: -9px
+			left: 50%
+			margin-left: -6px
+			display: block
+		&::before
+			content: ''
+			width: 100%
+			height: 30px
+			display: block
+			left: 0
+			right: 0
+			position: absolute
+			bottom: 22px
+			background-color: rgba(#fff,.5);
+		&-button
+			padding: 0 20px
+			background-color: #c7c4c9
+			border-radius: 2px 2px 0 0
+			display: inline-block
+			line-height: 21px
+			color: #515052
+			font-size: 14px
+			font-family: "OpenSansRegular", sans-serif
+			cursor: pointer
+		&-hidden
+			display: none
+		&-d
+			margin-top: 0
+	&__partners
+		@extend .clearfix
+		margin-top: 30px
+		border-bottom: 1px solid #c7c4c9
+		padding-bottom: 30px
+		&-item
+			float: left
+			width: 100 / 3 + %
+			display: block
+			margin-bottom: 36px
+		&-link
+			display: inline-block
+			img
+				display: block
+	&__bslider
+		width: 100%
+		&-item
+			display: inline-block
+			width: 58%
+			margin-left: 1%
+			margin-right: 1%
+		&-img
+			width: 404px
+			display: block
+			width: 100%
+		&-title
+			color: #333138
+			font-size: 18px
+			font-family: "MuseoSansRegular", sans-serif
+			line-height: 24px
+			margin-top: 10px
+			display: inline-block
+		&-description
+			color: #333138
+			font-size: 14px
+			font-family: "MuseoSansRegular", sans-serif
+			line-height: 18px
+			margin-top: 5px
 .path
 	margin-top: 9px
 	&__item
